[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prefabs/SlidingNode.gd" type="Script" id=1]

[node name="SlidingNode" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StartSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 10000.0
attenuation = 0.000396608

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 10000.0
attenuation = 0.000396608

[node name="StopSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 10000.0
attenuation = 9.98168e-10
